syntax="proto3";

option csharp_namespace = "GrpcClient";

package book;

service Book {
  rpc GetBookById (GetBookByIdModel) returns (BookModel);
}

message GetBookByIdModel{
  int32 bookId = 1;
}

message BookModel {
  int32 bookId = 1;
  string name = 2;
  string description = 3;

}